--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -5,86 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfRestaurant"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="1000" AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        Title="MainWindow" Height="550" Width="1000" AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown" Activated="Window_Activated">
     <Grid>
         <DockPanel>
             <DockPanel DockPanel.Dock="Top" Height="40">
                 <DockPanel.Background>
-                    <ImageBrush ImageSource="pic/head.gif"/>
+                    <ImageBrush ImageSource="pic/head.gif" />
                 </DockPanel.Background>
                 <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
-                    <Button  Background="{x:Null}" BorderBrush="{x:Null}" Click="Login" Height="30" Margin="50,0">
-                        <Image Source="pic/unlogin.gif"></Image>
+                    <Button Background="{x:Null}" BorderBrush="{x:Null}" Click="Login" Height="30" Margin="50,0">
+                        <Image Source="pic/unlogin.gif" />
                     </Button>
                     <Button Height="30" Margin="50,0" Background="{x:Null}" BorderBrush="{x:Null}" Click="CloseClick">
-                        <Image Source="pic/close.gif" ></Image>
+                        <Image Source="pic/close.gif" />
                     </Button>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                </StackPanel>
+                <StackPanel Orientation="Horizontal" />
             </DockPanel>
             <DockPanel DockPanel.Dock="Left" Width="200" Background="White">
                 <DockPanel DockPanel.Dock="Top" Height="45">
                     <DockPanel.Background>
-                        <ImageBrush ImageSource="pic/title.gif"/>
+                        <ImageBrush ImageSource="pic/title.gif" />
                     </DockPanel.Background>
-                    <TextBlock FontSize="24px" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">露营餐厅</TextBlock>
+                    <TextBlock FontSize="24px" Foreground="White" HorizontalAlignment="Center"
+                               VerticalAlignment="Center">
+                        露营餐厅
+                    </TextBlock>
                 </DockPanel>
                 <StackPanel DockPanel.Dock="Bottom">
                     <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/time.gif"/>
+                        <ImageBrush ImageSource="pic/time.gif" />
                     </StackPanel.Background>
-                    <TextBlock FontSize="24" Foreground="White" Margin="10,5">23:35:08</TextBlock>
-                    <TextBlock FontSize="24" Foreground="White" Margin="10,5">2017-3-9</TextBlock>
+                    <TextBlock x:Name="TimeTextblock" FontSize="24" Foreground="White" Margin="10,5" />
+                    <TextBlock x:Name="DateTextBlock" FontSize="24" Foreground="White" Margin="10,5" />
                 </StackPanel>
                 <DockPanel>
                     <StackPanel DockPanel.Dock="Bottom" Height="80" HorizontalAlignment="Left" Width="120">
                         <StackPanel Orientation="Horizontal" Height="40">
                             <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/table_num.gif"/>
+                                <ImageBrush ImageSource="pic/table_num.gif" />
                             </StackPanel.Background>
-                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60" TextAlignment="Center">占用中</TextBlock>
-                            <TextBlock x:Name="BusyTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White" Text="0" Width="60" TextAlignment="Center"/>
+                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60"
+                                       TextAlignment="Center">
+                                占用中
+                            </TextBlock>
+                            <TextBlock x:Name="BusyTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White"
+                                       Text="0" Width="60" TextAlignment="Center" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Height="40">
                             <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/table_num.gif"/>
+                                <ImageBrush ImageSource="pic/table_num.gif" />
                             </StackPanel.Background>
-                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60" TextAlignment="Center">空闲中</TextBlock>
-                            <TextBlock x:Name="FreeTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White" Text="20" Width="60" TextAlignment="Center"/>
+                            <TextBlock Margin="0" VerticalAlignment="Center" Foreground="White" Width="60"
+                                       TextAlignment="Center">
+                                空闲中
+                            </TextBlock>
+                            <TextBlock x:Name="FreeTextBlock" Margin="0" VerticalAlignment="Center" Foreground="White"
+                                       Text="20" Width="60" TextAlignment="Center" />
                         </StackPanel>
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Left">
                         <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="大厅">
-                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/dating.png"/>
+                                    <ImageBrush ImageSource="pic/dating.png" />
                                 </StackPanel.Background>
-                                <TextBlock Text="大厅" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                                <TextBlock Text="大厅" Foreground="White" FontSize="20" TextAlignment="Center"
+                                           Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
                         <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="小包间">
-                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/baojian.gif"/>
+                                    <ImageBrush ImageSource="pic/baojian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Text="小包间" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                                <TextBlock Text="小包间" Foreground="White" FontSize="20" TextAlignment="Center"
+                                           Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
                         <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="大包间">
-                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/baojian.gif"/>
+                                    <ImageBrush ImageSource="pic/baojian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Text="大包间" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                                <TextBlock Text="大包间" Foreground="White" FontSize="20" TextAlignment="Center"
+                                           Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
                         <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="全部桌台">
-                            <StackPanel Width="150" Height="55" Orientation="Horizontal" >
+                            <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/quanbu.gif"/>
+                                    <ImageBrush ImageSource="pic/quanbu.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Text="全部桌台" Foreground="White" FontSize="20" TextAlignment="Center" Width="150" VerticalAlignment="Center"/>
+                                <TextBlock Text="全部桌台" Foreground="White" FontSize="20" TextAlignment="Center"
+                                           Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
                     </StackPanel>
@@ -92,44 +107,57 @@
             </DockPanel>
             <DockPanel>
                 <DockPanel.Background>
-                    <ImageBrush ImageSource="pic/main_bgc.gif"/>
+                    <ImageBrush ImageSource="pic/main_bgc.gif" />
                 </DockPanel.Background>
                 <DockPanel Dock="Left">
                     <StackPanel DockPanel.Dock="Top">
-                        <Button Width="50" Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Margin="50,40,0,0" Click="Button_Click_2">
-                            <Image Source="pic/refresh.png"></Image>
+                        <Button Width="50" Height="50" Background="{x:Null}" BorderBrush="{x:Null}" Margin="50,40,0,0"
+                                Click="Button_Click_2">
+                            <Image Source="pic/refresh.png" />
                         </Button>
                     </StackPanel>
                     <StackPanel>
-                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,50,0,10" Click="Button_Click">
+                        <!--<Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,50,0,10"
+                                Click="Button_Click">
                             <StackPanel Width="40" Height="80" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                    <ImageBrush ImageSource="pic/tangdian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">堂<LineBreak/>点</TextBlock>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40"
+                                           VerticalAlignment="Center">
+                                    堂<LineBreak />点
+                                </TextBlock>
                             </StackPanel>
                         </Button>
-                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,10" Click="Button_Click_1">
+                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,10"
+                                Click="Button_Click_1">
                             <StackPanel Width="40" Height="80" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                    <ImageBrush ImageSource="pic/tangdian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">预<LineBreak/>订</TextBlock>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40"
+                                           VerticalAlignment="Center">
+                                    预<LineBreak />订
+                                </TextBlock>
                             </StackPanel>
-                        </Button>
-                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,10">
+                        </Button>-->
+                        <Button Width="40" Height="80" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,50" Click="OutFoodClick">
                             <StackPanel Width="40" Height="80" Orientation="Horizontal">
                                 <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/tangdian.gif"/>
+                                    <ImageBrush ImageSource="pic/tangdian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40" VerticalAlignment="Center">外<LineBreak/>卖</TextBlock>
+                                <TextBlock Foreground="White" FontSize="20" TextAlignment="Center" Width="40"
+                                           VerticalAlignment="Center">
+                                    外<LineBreak />卖
+                                </TextBlock>
                             </StackPanel>
                         </Button>
                     </StackPanel>
                 </DockPanel>
-                <Frame x:Name="SidebarFrame" DockPanel.Dock="Right" Width="330" NavigationUIVisibility="Hidden" Margin="20"></Frame>
+                <Frame x:Name="SidebarFrame" DockPanel.Dock="Right" Width="330" NavigationUIVisibility="Hidden"
+                       Margin="20" />
                 <DockPanel>
-                    <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden" Margin="0,40"></Frame>
+                    <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden" Margin="0,40" />
                 </DockPanel>
             </DockPanel>
         </DockPanel>
