--- a/WpfRestaurant/MenuWindow.xaml
+++ b/WpfRestaurant/MenuWindow.xaml
@@ -5,77 +5,90 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfRestaurant"
         mc:Ignorable="d"
-        Title="热菜" Height="550" Width="400" WindowStartupLocation="CenterScreen" AllowsTransparency="True" WindowStyle="None" MouseLeftButtonUp="Window_MouseLeftButtonUp" Background="{x:Null}">
+        Title="热菜" Height="550" Width="400" WindowStartupLocation="CenterScreen" AllowsTransparency="True"
+        WindowStyle="None" MouseLeftButtonUp="Window_MouseLeftButtonUp" Background="{x:Null}">
     <Grid>
         <DockPanel>
             <DockPanel Dock="Top">
                 <DockPanel Dock="Left" Width="100" Height="30" Margin="40,0">
                     <DockPanel.Background>
-                        <ImageBrush ImageSource="pic/caidan.png"/>
+                        <ImageBrush ImageSource="pic/caidan.png" />
                     </DockPanel.Background>
-                    <TextBlock Text="菜单" FontSize="20" Foreground="White" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                    <TextBlock Text="菜单" FontSize="20" Foreground="White" TextAlignment="Center"
+                               VerticalAlignment="Center" />
                 </DockPanel>
                 <DockPanel Dock="Right" Width="50" Height="30" Margin="20,0">
                     <Button Background="{x:Null}" BorderBrush="{x:Null}" Click="Closer_Menu">
-                        <Image Source="pic/caidan_close.png"></Image>
+                        <Image Source="pic/caidan_close.png" />
                     </Button>
                 </DockPanel>
-                <DockPanel></DockPanel>
+                <DockPanel />
             </DockPanel>
             <DockPanel>
                 <DockPanel.Background>
-                    <ImageBrush ImageSource="pic/menu_bg.png"/>
+                    <ImageBrush ImageSource="pic/menu_bg.png" />
                 </DockPanel.Background>
                 <DockPanel Dock="Left">
                     <DockPanel Dock="Bottom">
                         <Button Background="{x:Null}" BorderBrush="{x:Null}" Click="Button_Click_3">
                             <DockPanel Width="110" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/blue_button.png"/>
+                                    <ImageBrush ImageSource="pic/blue_button.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="确定" FontSize="20" Foreground="White" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                                <TextBlock Text="确定" FontSize="20" Foreground="White" TextAlignment="Center"
+                                           VerticalAlignment="Center" />
                             </DockPanel>
                         </Button>
                     </DockPanel>
                     <StackPanel>
-                        <Button Width="125" Height="40"  Click="Button_Click" Tag="1" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,0,0,0">
+                        <Button Width="125" Height="40" Click="Button_Click" Tag="1" Background="{x:Null}"
+                                BorderBrush="{x:Null}" Margin="5,0,0,0">
                             <DockPanel Width="125" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/cai.png"/>
+                                    <ImageBrush ImageSource="pic/cai.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="热菜" FontSize="20" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"></TextBlock>
+                                <TextBlock Text="热菜" FontSize="20" TextAlignment="Center" VerticalAlignment="Center"
+                                           Foreground="White" />
                             </DockPanel>
                         </Button>
-                        <Button Width="125" Height="40"  Click="Button_Click" Tag="2" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,0,0,0">
+                        <Button Width="125" Height="40" Click="Button_Click" Tag="2" Background="{x:Null}"
+                                BorderBrush="{x:Null}" Margin="5,0,0,0">
                             <DockPanel Width="125" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/cai2.png"/>
+                                    <ImageBrush ImageSource="pic/cai2.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="凉菜" FontSize="20" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"></TextBlock>
+                                <TextBlock Text="凉菜" FontSize="20" TextAlignment="Center" VerticalAlignment="Center"
+                                           Foreground="White" />
                             </DockPanel>
                         </Button>
-                        <Button Width="125" Height="40"  Click="Button_Click" Tag="3" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,0,0,0">
+                        <Button Width="125" Height="40" Click="Button_Click" Tag="3" Background="{x:Null}"
+                                BorderBrush="{x:Null}" Margin="5,0,0,0">
                             <DockPanel Width="125" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/cai2.png"/>
+                                    <ImageBrush ImageSource="pic/cai2.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="主食" FontSize="20" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"></TextBlock>
+                                <TextBlock Text="主食" FontSize="20" TextAlignment="Center" VerticalAlignment="Center"
+                                           Foreground="White" />
                             </DockPanel>
                         </Button>
-                        <Button Width="125" Height="40"  Click="Button_Click" Tag="4" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,0,0,0">
+                        <Button Width="125" Height="40" Click="Button_Click" Tag="4" Background="{x:Null}"
+                                BorderBrush="{x:Null}" Margin="5,0,0,0">
                             <DockPanel Width="125" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/cai2.png"/>
+                                    <ImageBrush ImageSource="pic/cai2.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="饮品" FontSize="20" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"></TextBlock>
+                                <TextBlock Text="饮品" FontSize="20" TextAlignment="Center" VerticalAlignment="Center"
+                                           Foreground="White" />
                             </DockPanel>
                         </Button>
-                        <Button Width="125" Height="40"  Click="Button_Click" Tag="5" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,0,0,0">
+                        <Button Width="125" Height="40" Click="Button_Click" Tag="5" Background="{x:Null}"
+                                BorderBrush="{x:Null}" Margin="5,0,0,0">
                             <DockPanel Width="125" Height="40">
                                 <DockPanel.Background>
-                                    <ImageBrush ImageSource="pic/cai2.png"/>
+                                    <ImageBrush ImageSource="pic/cai2.png" />
                                 </DockPanel.Background>
-                                <TextBlock Text="香烟" FontSize="20" TextAlignment="Center" VerticalAlignment="Center" Foreground="White"></TextBlock>
+                                <TextBlock Text="香烟" FontSize="20" TextAlignment="Center" VerticalAlignment="Center"
+                                           Foreground="White" />
                             </DockPanel>
                         </Button>
                         <!--<Button Height="40" Click="Button_Click" Tag="2">凉菜</Button>
@@ -90,26 +103,32 @@
                             <DataTemplate>
                                 <DockPanel Width="270">
                                     <DockPanel.Background>
-                                        <ImageBrush ImageSource="pic/cai2.png" Stretch="Fill"/>
+                                        <ImageBrush ImageSource="pic/cai2.png" Stretch="Fill" />
                                     </DockPanel.Background>
                                     <StackPanel DockPanel.Dock="Left" Width="100">
-                                        <Image Source="pic/menu.png"></Image>
+                                        <Image Source="pic/menu.png" />
                                     </StackPanel>
                                     <StackPanel>
                                         <StackPanel VerticalAlignment="Center" Margin="0,5">
-                                            <TextBlock Text="{Binding Path=Food.Name}" FontSize="20" TextAlignment="Center" TextWrapping="Wrap"/>
+                                            <TextBlock Text="{Binding Path=Food.Name}" FontSize="20"
+                                                       TextAlignment="Center" TextWrapping="Wrap" />
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5">
-                                            <Button VerticalAlignment="Center" Width="20" Height="20" Click="Button_Click_2" Tag="{Binding Food.Id}" Background="{x:Null}" BorderBrush="{x:Null}">
-                                                <Image Source="pic/jian.png"/>
+                                            <Button VerticalAlignment="Center" Width="20" Height="20"
+                                                    Click="Button_Click_2" Tag="{Binding Food.Id}"
+                                                    Background="{x:Null}" BorderBrush="{x:Null}">
+                                                <Image Source="pic/jian.png" />
                                             </Button>
-                                            <TextBlock VerticalAlignment="Center" Width="20" Height="20" TextAlignment="Center" FontSize="16" Text="{Binding Num}">
+                                            <TextBlock VerticalAlignment="Center" Width="20" Height="20"
+                                                       TextAlignment="Center" FontSize="16" Text="{Binding Num}">
                                                 <TextBlock.Background>
-                                                    <ImageBrush ImageSource="pic/circle.png"/>
+                                                    <ImageBrush ImageSource="pic/circle.png" />
                                                 </TextBlock.Background>
                                             </TextBlock>
-                                            <Button VerticalAlignment="Center" Width="20" Height="20" Click="Button_Click_1" Tag="{Binding Food.Id}" Background="{x:Null}" BorderBrush="{x:Null}">
-                                                <Image Source="pic/jia.png"></Image>
+                                            <Button VerticalAlignment="Center" Width="20" Height="20"
+                                                    Click="Button_Click_1" Tag="{Binding Food.Id}"
+                                                    Background="{x:Null}" BorderBrush="{x:Null}">
+                                                <Image Source="pic/jia.png" />
                                             </Button>
                                         </StackPanel>
                                     </StackPanel>
