--- a/WpfRestaurant/AppointPage.xaml
+++ b/WpfRestaurant/AppointPage.xaml
@@ -1,16 +1,16 @@
 ﻿<Page x:Class="WpfRestaurant.AppointPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfRestaurant"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="300" d:DesignWidth="643.129"
       Title="AppointPage">
 
     <Grid>
         <DockPanel>
-            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" >
+            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                 <Button Width="150" Height="40" Margin="5">半小时内开餐</Button>
                 <Button Width="150" Height="40" Margin="5">一小时内开餐</Button>
                 <Button Width="150" Height="40" Margin="5">二小时内开餐</Button>
@@ -19,56 +19,72 @@
             <WrapPanel>
                 <StackPanel Width="190" Height="90" Margin="10">
                     <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
+                        <ImageBrush ImageSource="pic/yellow_button.png" />
                     </StackPanel.Background>
                     <StackPanel Orientation="Horizontal">
                         <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
+                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White"
+                                       Text="A009" />
                         </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
+                        <StackPanel Width="110" VerticalAlignment="Center" Height="90">
+                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00"
+                                       VerticalAlignment="Center" Margin="0,20,0,0">
+                                预约
+                            </TextBlock>
                             <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Width="190" Height="90" Margin="10">
                     <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
+                        <ImageBrush ImageSource="pic/yellow_button.png" />
                     </StackPanel.Background>
                     <StackPanel Orientation="Horizontal">
                         <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
+                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White"
+                                       Text="A009" />
                         </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
+                        <StackPanel Width="110" VerticalAlignment="Center" Height="90">
+                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00"
+                                       VerticalAlignment="Center" Margin="0,20,0,0">
+                                预约
+                            </TextBlock>
                             <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Width="190" Height="90" Margin="10">
                     <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
+                        <ImageBrush ImageSource="pic/yellow_button.png" />
                     </StackPanel.Background>
                     <StackPanel Orientation="Horizontal">
                         <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
+                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White"
+                                       Text="A009" />
                         </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
+                        <StackPanel Width="110" VerticalAlignment="Center" Height="90">
+                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00"
+                                       VerticalAlignment="Center" Margin="0,20,0,0">
+                                预约
+                            </TextBlock>
                             <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Width="190" Height="90" Margin="10">
                     <StackPanel.Background>
-                        <ImageBrush ImageSource="pic/yellow_button.png"/>
+                        <ImageBrush ImageSource="pic/yellow_button.png" />
                     </StackPanel.Background>
                     <StackPanel Orientation="Horizontal">
                         <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="A009"/>
+                            <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White"
+                                       Text="A009" />
                         </StackPanel>
-                        <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
+                        <StackPanel Width="110" VerticalAlignment="Center" Height="90">
+                            <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00"
+                                       VerticalAlignment="Center" Margin="0,20,0,0">
+                                预约
+                            </TextBlock>
                             <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center">11:22</TextBlock>
                         </StackPanel>
                     </StackPanel>
