--- a/WpfRestaurant/BookPage.xaml
+++ b/WpfRestaurant/BookPage.xaml
@@ -1,14 +1,14 @@
 ﻿<Page x:Class="WpfRestaurant.BookPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfRestaurant"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="470" d:DesignWidth="330"
       Title="BookPage">
     <Page.Background>
-        <ImageBrush ImageSource="pic/diancai.png"/>
+        <ImageBrush ImageSource="pic/diancai.png" />
     </Page.Background>
 
     <Grid>
@@ -17,36 +17,37 @@
                 <Button Height="50" Click="Button_Click" Width="180" Background="{x:Null}" BorderBrush="{x:Null}">
                     <DockPanel Width="180" Height="50">
                         <DockPanel.Background>
-                            <ImageBrush ImageSource="pic/red_button.png"/>
+                            <ImageBrush ImageSource="pic/red_button.png" />
                         </DockPanel.Background>
-                        <TextBlock Text="到店" FontSize="20" Foreground="White" VerticalAlignment="Center" TextAlignment="Center"></TextBlock>
+                        <TextBlock Text="到店" FontSize="20" Foreground="White" VerticalAlignment="Center"
+                                   TextAlignment="Center" />
                     </DockPanel>
                 </Button>
             </StackPanel>
-            <StackPanel x:Name="BookStackPanel" >
+            <StackPanel x:Name="BookStackPanel">
                 <StackPanel Orientation="Horizontal" Margin="10,30,0,5">
-                    <TextBlock Text="桌号:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Table_id}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="桌号:" FontSize="20" />
+                    <TextBlock Text="{Binding Table_id}" FontSize="20" Margin="10,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                    <TextBlock Text="姓名:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Name}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="姓名:" FontSize="20" />
+                    <TextBlock Text="{Binding Name}" FontSize="20" Margin="10,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                    <TextBlock Text="电话:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Phone}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="电话:" FontSize="20" />
+                    <TextBlock Text="{Binding Phone}" FontSize="20" Margin="10,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                    <TextBlock Text="人数:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Counts}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="人数:" FontSize="20" />
+                    <TextBlock Text="{Binding Counts}" FontSize="20" Margin="10,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                    <TextBlock Text="备注:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Remark}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="备注:" FontSize="20" />
+                    <TextBlock Text="{Binding Remark}" FontSize="20" Margin="10,0" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                    <TextBlock Text="时间:" FontSize="20"></TextBlock>
-                    <TextBlock Text="{Binding Time}" FontSize="20" Margin="10,0"></TextBlock>
+                    <TextBlock Text="时间:" FontSize="20" />
+                    <TextBlock Text="{Binding Time}" FontSize="20" Margin="10,0" />
                 </StackPanel>
             </StackPanel>
         </DockPanel>
