--- a/WpfRestaurant/FreeTablePage.xaml
+++ b/WpfRestaurant/FreeTablePage.xaml
@@ -1,33 +1,35 @@
 ﻿<Page x:Class="WpfRestaurant.FreeTablePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfRestaurant"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignHeight="470" d:DesignWidth="330"
       Title="FreeTablePage">
     <Page.Background>
-        <ImageBrush ImageSource="pic/diancai.png"/>
+        <ImageBrush ImageSource="pic/diancai.png" />
     </Page.Background>
 
     <Grid>
         <DockPanel>
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="大厅" Margin="10,0" FontSize="20"/>
-                <TextBlock x:Name="tableNoTextblock" Text="A008" Margin="10,0" FontSize="20"/>
+                <TextBlock x:Name="TypeTextBlock" Text="大厅" Margin="10,0" FontSize="20" />
+                <TextBlock x:Name="TableNoTextblock" Text="A008" Margin="10,0" FontSize="20" />
             </StackPanel>
             <StackPanel DockPanel.Dock="Bottom">
-                <Button Height="50" Background="{x:Null}" Click="Button_Click" BorderBrush="{x:Null}" Width="180" Margin="0">
+                <Button Height="50" Background="{x:Null}" Click="Button_Click" BorderBrush="{x:Null}" Width="180"
+                        Margin="0">
                     <DockPanel Width="180" Height="50">
                         <DockPanel.Background>
-                            <ImageBrush ImageSource="pic/red_button.png"/>
+                            <ImageBrush ImageSource="pic/red_button.png" />
                         </DockPanel.Background>
-                        <TextBlock Text="点菜" VerticalAlignment="Center" FontSize="20" Foreground="White" TextAlignment="Center"></TextBlock>
+                        <TextBlock Text="点菜" VerticalAlignment="Center" FontSize="20" Foreground="White"
+                                   TextAlignment="Center" />
                     </DockPanel>
                 </Button>
             </StackPanel>
-            <DockPanel></DockPanel>
+            <DockPanel />
         </DockPanel>
     </Grid>
 </Page>
