--- a/WpfRestaurant/LobbyOrderPage.xaml
+++ b/WpfRestaurant/LobbyOrderPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page x:Class="WpfRestaurant.LobbyOrderPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfRestaurant"
       mc:Ignorable="d"
       Title="LobbyOrderPage">
@@ -13,7 +13,7 @@
             <ItemsControl x:Name="BusyTableList">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
+                        <WrapPanel />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
@@ -47,22 +47,26 @@
                                 <Setter TargetName="paid_pic" Property="Source" Value="pic/paid_1.png"></Setter>
                             </DataTrigger>
                         </DataTemplate.Triggers>-->
-                        <Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}" BorderBrush="{x:Null}">
+                        <Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}"
+                                BorderBrush="{x:Null}">
                             <Grid Width="160" Height="100">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/blue_button.gif"/>
+                                    <ImageBrush ImageSource="pic/blue_button.gif" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
+                                    <RowDefinition />
+                                    <RowDefinition />
                                 </Grid.RowDefinitions>
-                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White" Text="{Binding No}" FontSize="20"/>
-                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="已下单"></TextBlock>
-                                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20" Text="{Binding Cost}" Foreground="White"/>
+                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White"
+                                           Text="{Binding No}" FontSize="20" />
+                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" FontSize="20"
+                                           Foreground="Lime" VerticalAlignment="Center" Text="已下单" />
+                                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"
+                                           Text="{Binding Cost}" Foreground="White" />
                             </Grid>
                         </Button>
                     </DataTemplate>
@@ -71,7 +75,7 @@
             <ItemsControl x:Name="FreeTableList">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
+                        <WrapPanel />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
@@ -89,21 +93,24 @@
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>-->
-                        <Button Click="FreeTableClick" Tag="{Binding Path=Id}" Background="{x:Null}" BorderBrush="{x:Null}">
+                        <Button Click="FreeTableClick" Tag="{Binding Path=Id}" Background="{x:Null}"
+                                BorderBrush="{x:Null}">
                             <Grid Width="160" Height="100">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/green_button.gif"/>
+                                    <ImageBrush ImageSource="pic/green_button.gif" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
+                                    <RowDefinition />
+                                    <RowDefinition />
                                 </Grid.RowDefinitions>
-                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White" Text="{Binding No}" FontSize="20"/>
-                                <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="空闲"></TextBlock>
+                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White"
+                                           Text="{Binding No}" FontSize="20" />
+                                <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontSize="20"
+                                           Foreground="Lime" VerticalAlignment="Center" Text="空闲" />
                             </Grid>
                         </Button>
                     </DataTemplate>
@@ -112,7 +119,7 @@
             <ItemsControl x:Name="OrderTableList">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
+                        <WrapPanel />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
@@ -131,22 +138,26 @@
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>-->
-                        <Button Click="OrderTableClick" Tag="{Binding Path=Order}" Background="{x:Null}" BorderBrush="{x:Null}">
+                        <Button Click="OrderTableClick" Tag="{Binding Path=Order}" Background="{x:Null}"
+                                BorderBrush="{x:Null}">
                             <Grid Width="160" Height="100">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/yellow_button.gif"/>
+                                    <ImageBrush ImageSource="pic/yellow_button.gif" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
+                                    <RowDefinition />
+                                    <RowDefinition />
                                 </Grid.RowDefinitions>
-                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White" Text="{Binding No}" FontSize="20"/>
-                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="预约"></TextBlock>
-                                <TextBlock Grid.Column="1" Grid.Row="1" Foreground="White" FontSize="20" TextAlignment="Center" Text="{Binding Time}"/>
+                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White"
+                                           Text="{Binding No}" FontSize="20" />
+                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" FontSize="20"
+                                           Foreground="Lime" VerticalAlignment="Center" Text="预约" />
+                                <TextBlock Grid.Column="1" Grid.Row="1" Foreground="White" FontSize="20"
+                                           TextAlignment="Center" Text="{Binding Time}" />
                             </Grid>
                         </Button>
                     </DataTemplate>
