--- a/WpfRestaurant/SetUpPage.xaml
+++ b/WpfRestaurant/SetUpPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page x:Class="WpfRestaurant.SetUpPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:WpfRestaurant"
       mc:Ignorable="d" d:DesignWidth="400"
       Title="SetUpPage">
@@ -10,33 +10,42 @@
     <Grid>
         <DockPanel>
             <StackPanel DockPanel.Dock="Bottom" HorizontalAlignment="Right">
-                <TextBlock Text="填写帮助" Foreground="White" Margin="20"></TextBlock>
+                <TextBlock Text="填写帮助" Foreground="White" Margin="20" />
             </StackPanel>
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <StackPanel>
                     <StackPanel x:Name="ConfigStackPanel">
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Width="360" Height="55">
-                                <TextBlock Width="80" Text="HTTP接口地址" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
-                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Http}"/>
+                                <TextBlock Width="80" Text="HTTP接口地址" VerticalAlignment="Center" TextAlignment="Right"
+                                           Margin="5,0" Foreground="White" />
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center"
+                                         Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Http}" />
                             </StackPanel>
                         </Border>
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Height="55" Width="360">
-                                <TextBlock Width="80" Text="TCP IP地址" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
-                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Tcp}"/>
+                                <TextBlock Width="80" Text="TCP IP地址" VerticalAlignment="Center" TextAlignment="Right"
+                                           Margin="5,0" Foreground="White" />
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center"
+                                         Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Tcp}" />
                             </StackPanel>
                         </Border>
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Height="55" Width="360">
-                                <TextBlock Width="80" Text="TCP 端口" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
-                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Port}"/>
+                                <TextBlock Width="80" Text="TCP 端口" VerticalAlignment="Center" TextAlignment="Right"
+                                           Margin="5,0" Foreground="White" />
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center"
+                                         Width="260" BorderBrush="#00ABADB3" Margin="5,0" Text="{Binding Path=Port}" />
                             </StackPanel>
                         </Border>
                     </StackPanel>
                     <StackPanel>
                         <Border Background="White" Padding="5" BorderThickness="2" CornerRadius="10" Margin="0 60">
-                            <Button  Height="50" Background="White" BorderBrush="#00707070" FontSize="20" Click="Button_Click">保存并返回登录页</Button>
+                            <Button Height="50" Background="White" BorderBrush="#00707070" FontSize="20"
+                                    Click="Button_Click">
+                                保存并返回登录页
+                            </Button>
                         </Border>
                     </StackPanel>
                 </StackPanel>
