--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -75,24 +75,16 @@
                                            Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
-                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="小包间">
+                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="包间">
                             <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
                                     <ImageBrush ImageSource="pic/baojian.gif" />
                                 </StackPanel.Background>
-                                <TextBlock Text="小包间" Foreground="White" FontSize="20" TextAlignment="Center"
+                                <TextBlock Text="包间" Foreground="White" FontSize="20" TextAlignment="Center"
                                            Width="150" VerticalAlignment="Center" />
                             </StackPanel>
                         </Button>
-                        <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="大包间">
-                            <StackPanel Width="150" Height="55" Orientation="Horizontal">
-                                <StackPanel.Background>
-                                    <ImageBrush ImageSource="pic/baojian.gif" />
-                                </StackPanel.Background>
-                                <TextBlock Text="大包间" Foreground="White" FontSize="20" TextAlignment="Center"
-                                           Width="150" VerticalAlignment="Center" />
-                            </StackPanel>
-                        </Button>
+                        
                         <Button Click="Button_Click_3" Background="{x:Null}" BorderBrush="{x:Null}" Tag="全部桌台">
                             <StackPanel Width="150" Height="55" Orientation="Horizontal">
                                 <StackPanel.Background>
